--- a/src/components/Items/AvailableItems.css
+++ b/src/components/Items/AvailableItems.css
@@ -1,15 +1,9 @@
-
-.custom-container {
-    max-width: 800px; 
-    margin: 0 auto;
-  }
-  .product-link {
-    text-decoration: none; /* Remove underline from links */
-    color: #007bff; /* Set link color */
-    transition: color 0.3s ease; /* Smooth transition for color change */
-  }
-  
-  .product-link:hover {
-    color: #0056b3; /* Change color on hover */
-  }
-  
+body {
+  margin: 0;
+  padding: 0;
+  background-image: url('../../assets/background.png');
+  background-size: cover;
+  background-position: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
